Fixed menu bar spacing when logged in Fixed carousel spacing on home page

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,10 @@ body {
   background-color: #ddd;
 }
 
+#navbar ul#user-status a {
+    color: white;
+}
+
 .navbar-default, footer {
   background-color: #444;
 }
